--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "query-string": "^4.3.1",
     "react": "^15.4.2",
     "react-apollo": "^0.11.2",
+    "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
