Install mongoose package and other plugin for mongoose

--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "history": "^4.5.1",
     "isomorphic-style-loader": "^1.1.0",
     "jsonwebtoken": "^7.2.1",
+    "mongoose": "^4.9.0",
+    "mongoose-auto-increment": "^5.0.1",
+    "mongoose-timestamp": "^0.6.0",
     "node-fetch": "^1.6.3",
     "normalize.css": "^5.0.0",
     "passport": "^0.3.2",
