--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "history": "^4.5.1",
     "isomorphic-style-loader": "^1.1.0",
     "jsonwebtoken": "^7.2.1",
+    "moment": "^2.18.0",
     "mongoose": "^4.9.0",
     "mongoose-auto-increment": "^5.0.1",
     "mongoose-timestamp": "^0.6.0",
@@ -48,6 +49,7 @@
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
     "redux-thunk": "^2.1.0",
+    "reselect": "^2.5.4",
     "serialize-javascript": "^1.3.0",
     "source-map-support": "^0.4.11",
     "universal-router": "^2.0.0",
@@ -191,7 +193,6 @@
       ]
     }
   },
-  "pre-commit": "lint:staged",
   "lint-staged": {
     "*.{cmd,html,json,md,sh,txt,xml,yml}": [
       "editorconfig-tools fix",
