--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "history": "^4.5.1",
     "isomorphic-style-loader": "^1.1.0",
     "jsonwebtoken": "^7.2.1",
+    "lodash": "^4.17.4",
     "moment": "^2.18.0",
     "mongoose": "^4.9.0",
     "mongoose-auto-increment": "^5.0.1",
