--- a/package.json
+++ b/package.json
@@ -224,6 +224,7 @@
     "deploy": "babel-node tools/run deploy",
     "render": "babel-node tools/run render",
     "serve": "babel-node tools/run runServer",
-    "start": "babel-node tools/run start"
+    "start": "babel-node tools/run start",
+    "mgdummy": "./bin/mgdummy.sh"
   }
 }
