--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -6,7 +6,10 @@
     "no-plusplus": "off",
     "react/self-closing-comp": "off",
     "jsx-a11y/href-no-hash": "off",
-    "css-modules/no-unused-class": "off"
+    "css-modules/no-unused-class": "off",
+    "no-bitwise": ["error", { "allow": ["~"] }],
+    "no-underscore-dangle": "off",
+    "no-unused-expressions": ["error", { "allowTernary": true }]
     // "max-len": "off"
   }
 }
