--- a/package.json
+++ b/package.json
@@ -226,7 +226,7 @@
     "render": "babel-node tools/run render",
     "serve": "babel-node tools/run runServer",
     "start": "babel-node tools/run start",
-    "mexport": "COLLECTIONS=\"users posts\" DPATH=bin ./bin/mexports.sh",
-    "mimport": "mongo sns_test --eval 'db.dropDatabase()' && COLLECTIONS=\"users posts\" DPATH=bin ./bin/mimport.sh"
+    "mexport": "COLLECTIONS=\"users posts buildings\" DPATH=bin ./bin/mexports.sh",
+    "mimport": "mongo sns_test --eval 'db.dropDatabase()' && COLLECTIONS=\"users posts buildings\" DPATH=bin ./bin/mimport.sh"
   }
 }
