--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
+    "react-responsive": "^1.2.7",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
     "redux-thunk": "^2.1.0",
