--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "babel-polyfill": "^6.22.0",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.0",
-    "bootstrap": "^3.3.7",
+    "bootstrap-sass": "^3.3.7",
     "classnames": "^2.2.5",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
@@ -73,10 +73,11 @@
     "babel-register": "^6.22.0",
     "babel-template": "^6.22.0",
     "babel-types": "^6.22.0",
+    "bootstrap-loader": "^2.0.0",
     "browser-sync": "^2.18.7",
     "chai": "^3.5.0",
     "chokidar": "^1.6.1",
-    "css-loader": "^0.26.1",
+    "css-loader": "^0.28.0",
     "editorconfig-tools": "^0.1.1",
     "enzyme": "^2.7.1",
     "eslint": "^3.15.0",
@@ -86,6 +87,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.9.0",
+    "extract-text-webpack-plugin": "2.1.0",
     "file-loader": "^0.10.0",
     "front-matter": "^2.1.2",
     "glob": "^7.1.1",
@@ -94,6 +96,7 @@
     "markdown-it": "^8.2.2",
     "mkdirp": "^0.5.1",
     "mocha": "^3.2.0",
+    "node-sass": "^4.5.2",
     "pixrem": "^3.0.2",
     "pleeease-filters": "^3.0.0",
     "postcss": "^5.2.12",
@@ -119,12 +122,15 @@
     "react-hot-loader": "^3.0.0-beta.6",
     "redbox-react": "^1.3.3",
     "redux-mock-store": "^1.2.1",
+    "resolve-url-loader": "^2.0.2",
     "rimraf": "^2.5.4",
+    "sass-loader": "^6.0.3",
     "sinon": "^2.0.0-pre.5",
+    "style-loader": "^0.16.1",
     "stylefmt": "^5.1.1",
     "stylelint": "^7.8.0",
     "stylelint-config-standard": "^16.0.0",
-    "url-loader": "^0.5.7",
+    "url-loader": "^0.5.8",
     "webpack": "^2.2.1",
     "webpack-bundle-analyzer": "^2.3.0",
     "webpack-dev-middleware": "^1.10.0",
