--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "express-graphql": "^0.6.3",
     "express-jwt": "^5.1.0",
     "fastclick": "^1.0.6",
+    "firebase": "^3.7.5",
+    "firebase-admin": "^4.2.0",
     "font-awesome": "^4.7.0",
     "graphql": "^0.9.1",
     "graphql-tag": "^1.2.4",
