--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -11,7 +11,8 @@
     "no-underscore-dangle": "off",
     "no-unused-expressions": ["error", { "allowTernary": true }],
     "react/forbid-prop-types": 0,
-    "max-len": 0
+    "max-len": 0,
+    "jsx-a11y/no-static-element-interactions": 0
     // "import/prefer-default-export": "off",
     // "max-len": "off"
   }
