--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-infinite-scroller": "^1.0.7",
     "react-redux": "^5.0.2",
     "react-responsive": "^1.2.7",
+    "react-sticky": "^5.0.5",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
     "redux-thunk": "^2.1.0",
