--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "serialize-javascript": "^1.3.0",
     "source-map-support": "^0.4.11",
     "universal-router": "^2.0.0",
+    "uuid": "^3.0.1",
     "whatwg-fetch": "^2.0.2"
   },
   "devDependencies": {
