--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react": "^15.4.2",
     "react-apollo": "^0.11.2",
     "react-bootstrap": "^0.30.8",
+    "react-custom-scrollbars": "^4.1.0",
     "react-dom": "^15.4.2",
     "react-infinite-scroller": "^1.0.7",
     "react-redux": "^5.0.2",
