--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "react-apollo": "^0.11.2",
     "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.2",
+    "react-image-crop": "^2.0.3",
+    "react-image-cropper": "^1.1.0",
     "react-infinite-scroller": "^1.0.7",
     "react-redux": "^5.0.2",
     "react-responsive": "^1.2.7",
