--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-redux": "^5.0.2",
     "react-responsive": "^1.2.7",
     "react-sticky": "^5.0.5",
+    "react-vertical-timeline": "^0.1.2",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
     "redux-thunk": "^2.1.0",
