--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
     "react-infinite-scroller": "^1.0.7",
     "react-redux": "^5.0.2",
     "react-responsive": "^1.2.7",
+    "react-scrollable-anchor": "^0.4.2",
     "react-sticky": "^5.0.5",
+    "react-timeago": "^3.2.0",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
     "redux-thunk": "^2.1.0",
