--- a/package.json
+++ b/package.json
@@ -64,7 +64,10 @@
     "source-map-support": "^0.4.11",
     "universal-router": "^2.0.0",
     "uuid": "^3.0.1",
-    "whatwg-fetch": "^2.0.2"
+    "whatwg-fetch": "^2.0.2",
+    "winston": "^2.3.1",
+    "winston-daily-rotate-file": "^1.4.6",
+    "winston-syslog": "^1.2.6"
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.1",
