--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "classnames": "^2.2.5",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
+    "cors": "^2.8.3",
     "draft-js": "^0.10.0",
     "draft-js-export-html": "^0.5.2",
     "express": "^4.14.1",
