--- a/package.json
+++ b/package.json
@@ -225,13 +225,7 @@
     "deploy": "babel-node tools/run deploy",
     "render": "babel-node tools/run render",
     "serve": "babel-node tools/run runServer",
-    "start": "babel-node tools/run start",
-    "mexport": "COLLECTIONS=\"users posts buildings apartments comments friendsrelations\" DPATH=bin ./bin/mexports.sh",
-    "mimport": "mongo sns_test --eval 'db.dropDatabase()' && COLLECTIONS=\"users posts buildings apartments comments friendsrelations\" DPATH=bin ./bin/mimport.sh",
-    "prod.export": "COLLECTIONS=\"users posts buildings apartments comments \" DPATH=bin ./bin/mexports.server.sh",
-    "prod.import": "COLLECTIONS=\"users posts buildings apartments comments friendsrelations\" DPATH=bin ./bin/mimport.server.sh",
-    "dev.to.prod": "npm run mexport && npm run prod.import",
-    "prod.to.dev": "npm run prod.export && npm run mimport"
+    "start": "babel-node tools/run start"
   },
   "pre-commit": []
 }
