--- a/package.json
+++ b/package.json
@@ -19,8 +19,6 @@
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "cors": "^2.8.3",
-    "draft-js": "^0.10.0",
-    "draft-js-export-html": "^0.5.2",
     "express": "^4.14.1",
     "express-graphql": "^0.6.3",
     "express-jwt": "^5.1.0",
@@ -31,7 +29,6 @@
     "graphql": "^0.9.1",
     "graphql-tag": "^1.2.4",
     "history": "^4.5.1",
-    "isomorphic-style-loader": "^1.1.0",
     "jsonwebtoken": "^7.2.1",
     "lodash": "^4.17.4",
     "moment": "^2.18.0",
@@ -66,11 +63,9 @@
     "babel-register": "^6.22.0",
     "babel-template": "^6.22.0",
     "babel-types": "^6.22.0",
-    "bootstrap-loader": "^2.0.0",
     "browser-sync": "^2.18.7",
     "chai": "^3.5.0",
     "chokidar": "^1.6.1",
-    "css-loader": "^0.28.0",
     "editorconfig-tools": "^0.1.1",
     "enzyme": "^2.7.1",
     "eslint": "^3.15.0",
@@ -81,49 +76,15 @@
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.9.0",
     "extract-text-webpack-plugin": "2.1.0",
-    "file-loader": "^0.10.0",
-    "front-matter": "^2.1.2",
     "glob": "^7.1.1",
-    "json-loader": "^0.5.4",
     "lint-staged": "^3.3.0",
     "markdown-it": "^8.2.2",
     "mkdirp": "^0.5.1",
     "mocha": "^3.2.0",
-    "node-sass": "^4.5.2",
     "pixrem": "^3.0.2",
-    "pleeease-filters": "^3.0.0",
-    "postcss": "^5.2.12",
-    "postcss-calc": "^5.3.1",
-    "postcss-color-function": "^3.0.0",
-    "postcss-custom-media": "^5.0.1",
-    "postcss-custom-properties": "^5.0.2",
-    "postcss-custom-selectors": "^3.0.0",
-    "postcss-flexbugs-fixes": "^2.1.0",
-    "postcss-global-import": "^1.0.0",
-    "postcss-import": "^9.1.0",
-    "postcss-loader": "^1.2.2",
-    "postcss-media-minmax": "^2.1.2",
-    "postcss-nested": "^1.0.0",
-    "postcss-nesting": "^2.3.1",
-    "postcss-pseudoelements": "^3.0.0",
-    "postcss-selector-matches": "^2.0.5",
-    "postcss-selector-not": "^2.0.0",
     "pre-commit": "^1.2.2",
-    "raw-loader": "^0.5.1",
-    "react-addons-test-utils": "^15.4.2",
-    "react-deep-force-update": "^2.0.1",
-    "react-hot-loader": "^3.0.0-beta.6",
-    "redbox-react": "^1.3.3",
-    "redux-mock-store": "^1.2.1",
-    "resolve-url-loader": "^2.0.2",
     "rimraf": "^2.5.4",
-    "sass-loader": "^6.0.3",
     "sinon": "^2.0.0-pre.5",
-    "style-loader": "^0.16.1",
-    "stylefmt": "^5.1.1",
-    "stylelint": "^7.8.0",
-    "stylelint-config-standard": "^16.0.0",
-    "url-loader": "^0.5.8",
     "webpack": "^2.2.1",
     "webpack-bundle-analyzer": "^2.3.0",
     "webpack-dev-middleware": "^1.10.0",
@@ -225,7 +186,8 @@
     "deploy": "babel-node tools/run deploy",
     "render": "babel-node tools/run render",
     "serve": "babel-node tools/run runServer",
-    "start": "babel-node tools/run start"
+    "start": "babel-node tools/run start",
+    "validate": "npm ls"
   },
   "pre-commit": []
 }
