--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "eslint-plugin-react": "^6.9.0",
     "extract-text-webpack-plugin": "2.1.0",
     "glob": "^7.1.1",
+    "jest": "^20.0.3",
     "lint-staged": "^3.3.0",
     "markdown-it": "^8.2.2",
     "mkdirp": "^0.5.1",
