--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "font-awesome": "^4.7.0",
     "graphql": "^0.9.1",
     "graphql-tag": "^1.2.4",
+    "graphql-tools": "^0.11.0",
     "history": "^4.5.1",
     "jsonwebtoken": "^7.2.1",
     "lodash": "^4.17.4",
@@ -190,7 +191,9 @@
       "node_modules",
       "src"
     ],
-    "moduleNameMapper": {},
+    "moduleNameMapper": {
+      "^mongoose$": "<rootDir>/node_modules/mongoose"
+    },
     "setupTestFrameworkScriptFile": "<rootDir>/test/test-bundler.js",
     "testRegex": "tests/.*\\.test\\.js$"
   },
@@ -199,7 +202,7 @@
     "lint:css": "stylelint \"src/**/*.{css,less,scss,sss}\"",
     "lint:staged": "lint-staged",
     "lint": "yarn run lint:js && yarn run lint:css",
-    "test": "cross-env NODE_ENV=test jest --coverage",
+    "test": "cross-env NODE_ENV=test jest --coverage --forceExit --runInBand",
     "test:watch": "cross-env NODE_ENV=test jest --watchAll",
     "clean": "babel-node tools/run clean",
     "copy": "babel-node tools/run copy",
