update .gitlab-ci.yml file <npm install before test>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,6 +35,7 @@ test:
   stage: test
   before_script:
     - echo "before_script test"
+    - npm install
   script:
     - echo "execute-script-for-test"
     - npm run test
