--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "mongoose-timestamp": "^0.6.0",
     "node-fetch": "^1.6.3",
     "passport": "^0.3.2",
-    "passport-facebook": "^2.1.1",
+    "passport-facebook-token": "^3.3.0",
     "query-string": "^4.3.1",
     "serialize-javascript": "^1.3.0",
     "source-map-support": "^0.4.11",
