--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   ],
   "dependencies": {
     "babel-polyfill": "^6.22.0",
+    "bcrypt": "^1.0.2",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.0",
     "cookie-parser": "^1.4.3",
@@ -39,6 +40,7 @@
     "node-fetch": "^1.6.3",
     "passport": "^0.3.2",
     "passport-facebook-token": "^3.3.0",
+    "passport-local": "^1.0.0",
     "query-string": "^4.3.1",
     "serialize-javascript": "^1.3.0",
     "source-map-support": "^0.4.11",
