--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "cors": "^2.8.3",
+    "ejs": "^2.5.6",
+    "email-templates": "^2.6.0",
     "express": "^4.14.1",
     "express-graphql": "^0.6.3",
     "express-jwt": "^5.1.0",
@@ -38,6 +40,7 @@
     "mongoose-auto-increment": "^5.0.1",
     "mongoose-timestamp": "^0.6.0",
     "node-fetch": "^1.6.3",
+    "nodemailer": "^4.0.1",
     "passport": "^0.3.2",
     "passport-facebook-token": "^3.3.0",
     "passport-local": "^1.0.0",
