--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "passport-facebook-token": "^3.3.0",
     "passport-local": "^1.0.0",
     "query-string": "^4.3.1",
+    "rbac": "^4.0.2",
     "serialize-javascript": "^1.3.0",
     "source-map-support": "^0.4.11",
     "uuid": "^3.0.1",
@@ -71,13 +72,10 @@
     "chokidar": "^1.6.1",
     "cross-env": "^5.0.0",
     "editorconfig-tools": "^0.1.1",
-    "eslint": "^3.15.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-loader": "^1.6.1",
-    "eslint-plugin-css-modules": "^2.2.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.9.0",
+    "eslint": "^4.3.0",
+    "eslint-config-airbnb-base": "^11.2.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-import": "^2.7.0",
     "extract-text-webpack-plugin": "2.1.0",
     "glob": "^7.1.1",
     "jest": "^20.0.3",
@@ -118,12 +116,9 @@
   "eslintConfig": {
     "parser": "babel-eslint",
     "extends": [
-      "airbnb",
-      "plugin:css-modules/recommended"
+      "airbnb-base"
     ],
-    "plugins": [
-      "css-modules"
-    ],
+    "plugins": [],
     "globals": {
       "__DEV__": true
     },
@@ -133,10 +128,7 @@
     },
     "rules": {
       "import/extensions": "off",
-      "import/no-extraneous-dependencies": "off",
-      "react/jsx-filename-extension": "off",
-      "react/prefer-stateless-function": "off",
-      "react/require-default-props": "off"
+      "import/no-extraneous-dependencies": "off"
     }
   },
   "stylelint": {
