--- a/package.json
+++ b/package.json
@@ -55,18 +55,19 @@
     "assets-webpack-plugin": "^3.5.1",
     "autoprefixer": "^6.7.2",
     "babel-cli": "^6.22.2",
-    "babel-core": "^6.22.1",
+    "babel-core": "^6.25.0",
     "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.10",
+    "babel-jest": "^20.0.3",
+    "babel-loader": "^7.1.1",
     "babel-plugin-rewire": "^1.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-env": "^1.1.8",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-react-optimize": "^1.0.1",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
-    "babel-template": "^6.22.0",
-    "babel-types": "^6.22.0",
+    "babel-template": "^6.25.0",
+    "babel-types": "^6.25.0",
     "browser-sync": "^2.18.7",
     "chai": "^3.5.0",
     "chokidar": "^1.6.1",
@@ -104,6 +105,9 @@
         }
       ],
       "stage-2"
+    ],
+    "plugins": [
+      "transform-decorators-legacy"
     ],
     "env": {
       "test": {
@@ -197,7 +201,7 @@
     "lint:staged": "lint-staged",
     "lint": "yarn run lint:js && yarn run lint:css",
     "test": "cross-env NODE_ENV=test jest --coverage --forceExit --runInBand",
-    "testC": "cross-env NODE_ENV=test jest ./src/data/tests/RootSearchQuery.test.js --forceExit --runInBand",
+    "testC": "cross-env NODE_ENV=test jest ./src/utils/tests/authorization.test.js --forceExit --runInBand",
     "test:watch": "cross-env NODE_ENV=test jest --watchAll",
     "clean": "babel-node tools/run clean",
     "copy": "babel-node tools/run copy",
