--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "query-string": "^4.3.1",
     "rbac": "^4.0.2",
     "serialize-javascript": "^1.3.0",
+    "shortid": "^2.2.8",
     "source-map-support": "^0.4.11",
     "uuid": "^3.0.1",
     "whatwg-fetch": "^2.0.2",
