--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^1.0.2",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.0",
+    "busboy": "^0.2.14",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "cors": "^2.8.3",
