Add new text when sharing post

--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "cors": "^2.8.3",
-    "ejs": "^2.5.6",
+    "ejs": "^2.5.7",
     "email-templates": "^2.6.0",
     "express": "^4.14.1",
-    "express-graphql": "^0.6.3",
+    "express-graphql": "^0.6.7",
     "express-jwt": "^5.1.0",
     "fastclick": "^1.0.6",
     "firebase": "^3.7.5",
@@ -37,7 +37,7 @@
     "jsonwebtoken": "^7.2.1",
     "lodash": "^4.17.4",
     "moment": "^2.18.0",
-    "mongoose": "^4.9.0",
+    "mongoose": "^4.11.5",
     "mongoose-auto-increment": "^5.0.1",
     "mongoose-timestamp": "^0.6.0",
     "node-fetch": "^1.6.3",
@@ -88,14 +88,14 @@
     "lint-staged": "^3.3.0",
     "markdown-it": "^8.2.2",
     "mkdirp": "^0.5.1",
-    "mocha": "^3.2.0",
+    "mocha": "^3.5.0",
     "pixrem": "^3.0.2",
     "pre-commit": "^1.2.2",
-    "rimraf": "^2.5.4",
-    "sinon": "^2.0.0-pre.5",
+    "rimraf": "^2.6.1",
+    "sinon": "^2.4.1",
     "webpack": "^2.2.1",
     "webpack-bundle-analyzer": "^2.3.0",
-    "webpack-dev-middleware": "^1.10.0",
+    "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.16.1",
     "write-file-webpack-plugin": "^3.4.2"
   },
