--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "not ie < 9"
   ],
   "dependencies": {
+    "apollo-upload-server": "^2.0.4",
     "babel-polyfill": "^6.22.0",
     "bcrypt": "^1.0.2",
     "bluebird": "^3.4.7",
@@ -30,6 +31,7 @@
     "firebase": "^3.7.5",
     "firebase-admin": "^4.2.0",
     "font-awesome": "^4.7.0",
+    "formidable": "^1.1.1",
     "graphql": "^0.10.5",
     "graphql-tag": "^2.4.2",
     "graphql-tools": "^1.1.0",
@@ -42,9 +44,11 @@
     "mongoose-timestamp": "^0.6.0",
     "node-fetch": "^1.6.3",
     "nodemailer": "^4.0.1",
+    "object-path": "^0.11.4",
     "passport": "^0.3.2",
     "passport-facebook-token": "^3.3.0",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "query-string": "^4.3.1",
     "rbac": "^4.0.2",
     "serialize-javascript": "^1.3.0",
