--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "graphql-tag": "^2.4.2",
     "graphql-tools": "^1.1.0",
     "history": "^4.5.1",
+    "jest-cli": "^21.0.1",
     "jsonwebtoken": "^7.2.1",
     "lodash": "^4.17.4",
     "moment": "^2.18.0",
