--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "cors": "^2.8.3",
+    "draft-js": "^0.10.1",
+    "draft-js-export-html": "^1.1.0",
     "ejs": "^2.5.7",
     "email-templates": "^2.6.0",
     "express": "^4.14.1",
@@ -53,6 +55,8 @@
     "path": "^0.12.7",
     "query-string": "^4.3.1",
     "rbac": "^4.0.2",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "serialize-javascript": "^1.3.0",
     "shortid": "^2.2.8",
     "source-map-support": "^0.4.11",
