--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   ],
   "dependencies": {
     "apollo-upload-server": "^2.0.4",
+    "axios": "^0.18.0",
     "babel-polyfill": "^6.22.0",
     "bcrypt": "^1.0.3",
     "bluebird": "^3.4.7",
