--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "font-awesome": "^4.7.0",
     "formidable": "^1.1.1",
     "graphql": "^0.10.5",
+    "graphql-server-express": "^1.3.4",
+    "graphql-subscriptions": "^0.5.8",
     "graphql-tag": "^2.4.2",
     "graphql-tools": "^1.1.0",
     "history": "^4.5.1",
@@ -61,6 +63,7 @@
     "serialize-javascript": "^1.3.0",
     "shortid": "^2.2.8",
     "source-map-support": "^0.4.11",
+    "subscriptions-transport-ws": "^0.9.7",
     "uuid": "^3.0.1",
     "whatwg-fetch": "^2.0.2",
     "winston": "^2.3.1",
