--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,68 +1,43 @@
-image: node:6.10.0
-services:
-  - mongo:3.4.0
-
-cache:
-  paths:
-    - node_modules/
-    - .yarn
-
-before_script:
-  - echo "before_script"
-  - yarn global add node-gyp
-  - yarn config set cache-folder .yarn
-  - yarn install
-  - yarn run test
-
-after_script:
-  - echo "after_script"
-
 stages:
   - build
-  - test
   - deploy
 
-build:
+build_image:
   stage: build
-  before_script:
-    - echo "before_script build"
-    - yarn global add node-gyp
-    - yarn config set cache-folder .yarn
-    - yarn install
-    - yarn run test
+  image: docker:latest
+  services:
+    - docker:dind
   script:
-    - echo "execute-script-for-build"
-  after_script:
-    - echo "after_script build"
+    - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
+    - docker build -t $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME --cache-from $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME .
+    - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME
+  variables:
+    DOCKER_DRIVER: overlay2
   only:
-    - feature/refactor-code
-  tags:
-    - aws ec2
+    - develop
 
-test:
-  stage: test
-  before_script:
-    - echo "before_script test"
-    - npm install
-  script:
-    - echo "execute-script-for-test"
-    - npm run test
-  after_script:
-    - echo "after_script test"
-  only:
-    - feature/refactor-code
-  tags:
-    - aws ec2
-
-deploy:
+deploy_test:
   stage: deploy
-  before_script:
-    - echo "before_script deploy"
+  image: mttjsc/docker-rancher-compose:latest
   script:
-    - echo "execute-script-for-deploy"
-  after_script:
-    - echo "after_script deploy"
+    - rancher-compose --url "http://rancher.mttjsc.com:8080/" --access-key $RANCHER_ACCESS_KEY --secret-key $RANCHER_SECRET_KEY --project-name sns --file ci/rancher-dev.yml --verbose up --pull -d --force-upgrade
+    - rancher-compose --url "http://rancher.mttjsc.com:8080/" --access-key $RANCHER_ACCESS_KEY --secret-key $RANCHER_SECRET_KEY --project-name sns --file ci/rancher-dev.yml up -d --upgrade --confirm-upgrade
   only:
-    - feature/refactor-code
-  tags:
-    - aws ec2
+    - develop
+
+# build an image named production based on master
+tag_production_image:
+  stage: build
+  image: docker:latest
+  services:
+    - docker:dind
+  script:
+    - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
+    - docker pull $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME
+    - docker tag $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME $CI_REGISTRY_IMAGE:production
+    - docker push $CI_REGISTRY_IMAGE:production
+  variables:
+    DOCKER_DRIVER: overlay2
+  only:
+    - master
+  when: manual
