--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.18.0",
     "babel-polyfill": "^6.22.0",
     "bcrypt": "^1.0.3",
+    "bcryptjs": "^2.4.3",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.0",
     "busboy": "^0.2.14",
